Fix display to show rightmost digit when overflown

--- a/calc.css
+++ b/calc.css
@@ -47,6 +47,7 @@ h1 {
 }
 
 .display {
+    direction: rtl;
     font: 1.8em "Seven Segment", sans-serif;
     text-shadow: 0 0 5px white;
     padding: 0.5em;
